@@ -213,6 +213,21 @@
   [self setObject:obj forExtensionClass:[GDataYouTubeAspectRatio class]];
 }
 
+- (GDataMediaContent *)mediaContentWithFormatNumber:(NSInteger)formatNumber {
+  NSArray *mediaContents = [self mediaContents];
+
+#if MAC_OS_X_VERSION_MIN_REQUIRED <= MAC_OS_X_VERSION_10_4
+  NSNumber *formatNum = [NSNumber numberWithInt:formatNumber];
+#else
+  NSNumber *formatNum = [NSNumber numberWithInteger:formatNumber];
+#endif
+
+  GDataMediaContent *content;
+  content = [GDataUtilities firstObjectFromArray:mediaContents
+                                       withValue:formatNum
+                                      forKeyPath:@"youTubeFormatNumber"];
+  return content;
+}
 @end
 
 #endif // !GDATA_REQUIRE_SERVICE_INCLUDES || GDATA_INCLUDE_YOUTUBE_SERVICE
